polished UI and changed js to prevent user input from overflowing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
+body {
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
+    flex: 1;
     display: grid;
-    width: 400px;
-    gap: 5px;
+    max-width: 350px;
+    gap: 6px;
     background-color: cadetblue;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -11,15 +19,30 @@
 }
 
 .display {
-    background-color: gray;
+    display: flex;
+    background-color: rgb(205, 202, 202);
     grid-column: span 4;
+  
     border-radius: 20px;
+    color: rgb(57, 57, 57);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 38px;
+
+    align-items: flex-end;
+    justify-content: end;
 }
+
+.result {
+    padding: 10px;
+    padding-right: 30px;
+}
+
 
 .button {
     grid-column: span 1;
     grid-row: span 1;
-    height: 80px;
+    height: 70px;
+    border-radius: 20px;
 }
 
 .bigbtn {
